syntax = "proto3";
package factset.protobuf.stach.v2.table;

option csharp_namespace = "FactSet.Protobuf.Stach.V2.Table";
option go_package = "github.com/factset/stachschema/go/fds/protobuf/stach/v2/table";
option java_package = "com.factset.protobuf.stach.v2.table";
option java_outer_classname = "ColumnDataProto";

import "fds/protobuf/stach/v2/table/CellDefinition.proto";
import "google/protobuf/struct.proto";

/* An array of column data
 *
 * The type chosen correlates to the data type of the `ColumnDefinition.type`
 */
message ColumnData {
  // The map (key: uncompressed index, value: length to repeat the value) used during compression
  map<int32, int32> ranges = 1;

  // The values
  google.protobuf.ListValue values = 2;

  // The cell definitions
  repeated CellDefinition definitions = 3;
}
