syntax = "proto3";
package factset.protobuf.stach.v2.table;

option csharp_namespace = "FactSet.Protobuf.Stach.V2.Table";
option go_package = "github.com/factset/stachschema/go/fds/protobuf/stach/v2/table";
option java_package = "com.factset.protobuf.stach.v2.table";
option java_outer_classname = "RowDefinitionProto";

import "fds/protobuf/stach/v2/table/DataFormat.proto";

/* A definition of a row
 *
 * Overrides the column definition
 */
message RowDefinition {
  // The id; used for referring to a row internal to a package
  string id = 1;

  // The data format; overrides the `ColumnDefinition.format`
  DataFormat format = 2;
}
